Update birthday message emoji in index.html

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 <div class="photo-modal-caption" id="modal-caption"></div>
             </div>
         </div>
-        <div class="led-banner"><span id="name-text">🎉 지환아 생일 축하해 ! 🎉</span>
+        <div class="led-banner"><span id="name-text">🥳 지환아 생일 축하해 ! 🥳</span>
             <div class="led-banner-image" id="led-banner-image">
                 </div>
         </div>
